--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.5",
     "element-plus": "^2.4.4",
+    "less-loader": "^11.1.4",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
@@ -20,6 +21,7 @@
     "@vitejs/plugin-vue": "^4.5.2",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "less": "^4.2.0",
     "sass": "^1.69.7",
     "unplugin-auto-import": "^0.17.3",
     "unplugin-vue-components": "^0.26.0",
