--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vueuse/core": "^10.7.1",
     "axios": "^1.6.5",
     "element-plus": "^2.4.4",
     "less-loader": "^11.1.4",
